# opengl-test-clang

./: CMakeLists.txt  LICENSE
headers/: engine_data.h  fileloader.h  graphics.h  inputs.h  loadmodel.h  main.h  material.h  shader_compillers.h  vectors.h
includes/glad/: glad.c  glad.h
models/: testcube.glb  testcube.gltf  triangle.glb  triangle.gltf
shaders/: frag.glsl  vert.glsl
src/: engine_data.c  fileloader.c  inputs.c  main.c
src/assets/: loadmodel.c
src/graphics/opengl/: graphics.c  shader_compillers.c
